[gd_scene load_steps=15 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://potato/potato.tscn" type="PackedScene" id=2]
[ext_resource path="res://shop/seller.tscn" type="PackedScene" id=3]
[ext_resource path="res://sun.png" type="Texture" id=4]
[ext_resource path="res://terrain.png" type="Texture" id=5]
[ext_resource path="res://shop/shop.png" type="Texture" id=6]
[ext_resource path="res://cloud1.png" type="Texture" id=7]
[ext_resource path="res://cloud2.png" type="Texture" id=8]
[ext_resource path="res://cloud.gd" type="Script" id=9]
[ext_resource path="res://cloud2.gd" type="Script" id=10]
[ext_resource path="res://snow.gd" type="Script" id=11]
[ext_resource path="res://assets/coolvetica rg.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://client/sun_theme.tres" type="Theme" id=13]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 12 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="ClientTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="terrain" type="Sprite" parent="."]
position = Vector2( 438.85, 416.425 )
scale = Vector2( 1.7141, 1.7141 )
texture = ExtResource( 5 )

[node name="garden" type="Node2D" parent="."]

[node name="Potato" parent="garden" instance=ExtResource( 2 )]
position = Vector2( 81.6824, 331.808 )

[node name="Potato2" parent="garden" instance=ExtResource( 2 )]
position = Vector2( 144.911, 378.764 )

[node name="Potato3" parent="garden" instance=ExtResource( 2 )]
position = Vector2( 50.7697, 374.754 )

[node name="Potato4" parent="garden" instance=ExtResource( 2 )]
position = Vector2( 23.8644, 424.306 )

[node name="Potato5" parent="garden" instance=ExtResource( 2 )]
position = Vector2( 112.833, 426.432 )

[node name="Potato6" parent="garden" instance=ExtResource( 2 )]
position = Vector2( 179.367, 334.166 )

[node name="Potato7" parent="garden" instance=ExtResource( 2 )]
position = Vector2( 64.8156, 498.215 )

[node name="seller" parent="." instance=ExtResource( 3 )]
position = Vector2( 356.861, 440.534 )
scale = Vector2( 1, 1 )

[node name="shop2" type="Sprite" parent="."]
position = Vector2( 427.164, 406.693 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="client_spawner" type="Position2D" parent="."]
position = Vector2( 892.746, 526.475 )

[node name="shop" type="Node2D" parent="."]
position = Vector2( 517.542, 429.29 )

[node name="clients" type="Node2D" parent="."]

[node name="sun" type="Sprite" parent="."]
position = Vector2( 563.727, 86.4345 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="cloud" type="Node2D" parent="."]
position = Vector2( -264, 22.595 )
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="cloud1" type="Sprite" parent="cloud"]
position = Vector2( 138.427, 93.1138 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="cloud2" type="Sprite" parent="cloud"]
position = Vector2( 287.207, 77.0777 )
scale = Vector2( 4, 4 )
texture = ExtResource( 8 )

[node name="cloud2" type="Node2D" parent="."]
position = Vector2( 808, 13.384 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="cloud1" type="Sprite" parent="cloud2"]
position = Vector2( 219.499, 74.4049 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="cloud3" type="Sprite" parent="cloud2"]
position = Vector2( 30.6281, 113.604 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="cloud2" type="Sprite" parent="cloud2"]
position = Vector2( 80.5184, 57.4779 )
scale = Vector2( 4, 4 )
texture = ExtResource( 8 )

[node name="snow" type="ColorRect" parent="."]
margin_right = 881.0
margin_bottom = 608.0
color = Color( 0.384314, 0.384314, 0.384314, 0 )
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 878.0
margin_top = -1.0
margin_right = 1030.0
margin_bottom = 604.0
color = Color( 0.109804, 0.109804, 0.109804, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 878.0
margin_top = -1.0
margin_right = 954.0
margin_bottom = 604.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSlider" type="VSlider" parent="."]
margin_left = 898.0
margin_top = 14.0
margin_right = 1011.0
margin_bottom = 581.0
theme = ExtResource( 13 )
max_value = 1.0
step = 0.01
value = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="."]
margin_top = 1.63641
margin_right = 878.0
margin_bottom = 50.6364
custom_fonts/font = SubResource( 1 )
text = "00:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="ClientTimer" to="." method="_on_ClientTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
